--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "c:\\Users\\Pandey\\.virtualenvs\\twitter-clone-doKWYaAF\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\Pandey\\.virtualenvs\\twitter-clone-doKWYaAF\\Scripts\\python.exe",
     "python.autoComplete.extraPaths": ["c:\\Users\\Pandey\\.virtualenvs\\twitter-clone-doKWYaAF\\Scripts\\python.exe"],
     "editor.formatOnSave": true,
     "python.formatting.provider": "autopep8",
